k8s/app-js/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svelte-service
spec:
  selector:
    app: app-js
  type: LoadBalancer
  ports:
    - port: 8081
