k8s/app-js/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: js-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: svelte.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svelte-service
                port:
                  number: 8081
